test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/PortfolioFinancialAnalysis__c.object-meta.xml
<CustomObject>
    <label>Financial Analysis</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>