test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Active_Financial_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Active_Financial_Analysis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Financial Analysis</label>
    <referenceTo>PortfolioFinancialAnalysis__c</referenceTo>
    <relationshipLabel>Financial Analysis Snapshots</relationshipLabel>
    <relationshipName>Financial_Analysis</relationshipName>
    <type>Lookup</type>
</CustomField>