test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Class_A_ATIRR__c.field-meta.xml
<CustomField>
    <fullName>Class_A_ATIRR__c</fullName>
    <label>Class A ATIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>