test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Class_A_NPV__c.field-meta.xml
<CustomField>
    <fullName>Class_A_NPV__c</fullName>
    <label>Class A NPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>