test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Class_B_PTIRR__c.field-meta.xml
<CustomField>
    <fullName>Class_B_PTIRR__c</fullName>
    <label>Class B PTIRR</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>