test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Customers_Partner__c.field-meta.xml
<CustomField>
    <fullName>Customers_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customers/Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Analysis</relationshipLabel>
    <relationshipName>Portfolios</relationshipName>
    <type>Lookup</type>
</CustomField>