test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Date_Submitted_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_for_Review__c</fullName>
    <description>The date a portal user submits the project for DSD review.</description>
    <inlineHelpText>The date a portal user submits the project for DSD review.</inlineHelpText>
    <label>Date Submitted for Review</label>
    <type>Date</type>
</CustomField>