test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/EPC_Cost__c.field-meta.xml
<CustomField>
    <fullName>EPC_Cost__c</fullName>
    <inlineHelpText>Includes developer fees.</inlineHelpText>
    <label>EPC Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>