test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Estimated_COD__c.field-meta.xml
<CustomField>
    <fullName>Estimated_COD__c</fullName>
    <label>Estimated COD</label>
    <type>Date</type>
</CustomField>