test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Incentive_Structure__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Structure__c</fullName>
    <label>Incentive Structure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REC</fullName>
            </value>
            <value>
                <fullName>Dollar</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Capacity (per Wdc)</fullName>
                <isActive>false</isActive>
                <label>Capacity (per Wdc)</label>
            </value>
            <value>
                <fullName>Energy (per KWh)</fullName>
                <isActive>false</isActive>
                <label>Energy (per KWh)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>