test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Incentive_Term__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Term__c</fullName>
    <label>Incentive Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>