test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Is_the_PPA_Offtaker_Investment_Grade__c.field-meta.xml
<CustomField>
    <fullName>Is_the_PPA_Offtaker_Investment_Grade__c</fullName>
    <label>Is the PPA Offtaker Investment Grade?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>