test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Model_Type_Solve_For__c.field-meta.xml
<CustomField>
    <fullName>Model_Type_Solve_For__c</fullName>
    <label>Solver Variable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lease Payment</fullName>
            </value>
            <value>
                <fullName>PPA Price</fullName>
            </value>
            <value>
                <fullName>EPC Cost</fullName>
            </value>
            <value>
                <fullName>Acquisition Cost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>