test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Number_of_Sites__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sites__c</fullName>
    <description>Total number of sites.</description>
    <inlineHelpText>Total number of sites.</inlineHelpText>
    <label>Number of Sites</label>
    <summaryForeignKey>Sites__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>