test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Offtake_Type__c.field-meta.xml
<CustomField>
    <fullName>Offtake_Type__c</fullName>
    <label>Offtake Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utility</fullName>
            </value>
            <value>
                <fullName>Municipality</fullName>
            </value>
            <value>
                <fullName>Commercial/Industrial</fullName>
            </value>
            <value>
                <fullName>Community Solar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Nonprofit/Place of Worship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>