test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Portfolio_ATIRR__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_ATIRR__c</fullName>
    <label>Portfolio ATIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>