test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/PPA_Escalator__c.field-meta.xml
<CustomField>
    <fullName>PPA_Escalator__c</fullName>
    <inlineHelpText>Please use your best estimate based on customer conversations/expectations, typically 0%, 1% or 2%.</inlineHelpText>
    <label>PPA Escalator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>