test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/PPA_Rate__c.field-meta.xml
<CustomField>
    <fullName>PPA_Rate__c</fullName>
    <label>PPA Rate</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>