test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/PPA_Term__c.field-meta.xml
<CustomField>
    <fullName>PPA_Term__c</fullName>
    <inlineHelpText>Please use your best estimate based on customer conversations/expectations, typically 15, 20 or 25 years.</inlineHelpText>
    <label>PPA Term</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>