test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Pro_Forma_NPV__c.field-meta.xml
<CustomField>
    <fullName>Pro_Forma_NPV__c</fullName>
    <label>Pro Forma NPV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>