test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Project_eligible_for_incentives__c.field-meta.xml
<CustomField>
    <fullName>Project_eligible_for_incentives__c</fullName>
    <label>Project eligible for incentives?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>