test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Solver_class_A_advance_rate__c.field-meta.xml
<CustomField>
    <fullName>Solver_class_A_advance_rate__c</fullName>
    <description>Fraction of FMV the Class A member should contribute to the partnership for its returns up to the flip date to match the flip hurdle rate.</description>
    <inlineHelpText>Fraction of FMV the Class A member should contribute to the partnership for its returns up to the flip date to match the flip hurdle rate.</inlineHelpText>
    <label>Solver Class A advance rate</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>