test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Solver_Result__c.field-meta.xml
<CustomField>
    <fullName>Solver_Result__c</fullName>
    <label>Solver Result</label>
    <precision>12</precision>
    <scale>5</scale>
    <type>Currency</type>
</CustomField>