test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>using this field for the prototype project workflow</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indicative Pricing</fullName>
            </value>
            <value>
                <fullName>Qualification</fullName>
            </value>
            <value>
                <fullName>Preparing Firm Bid</fullName>
            </value>
            <value>
                <fullName>Pursuing Award</fullName>
            </value>
            <value>
                <fullName>Contracting</fullName>
            </value>
            <value>
                <fullName>Pursuing NTP</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Commissioning</fullName>
            </value>
            <value>
                <fullName>Asset Operations</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
                <isActive>false</isActive>
                <label>Additional Information Required</label>
            </value>
            <value>
                <fullName>Analysis Run</fullName>
                <isActive>false</isActive>
                <label>Analysis Run</label>
            </value>
            <value>
                <fullName>Cost Details</fullName>
                <isActive>false</isActive>
                <label>Cost Details</label>
            </value>
            <value>
                <fullName>DSD Approved</fullName>
                <isActive>false</isActive>
                <label>DSD Approved</label>
            </value>
            <value>
                <fullName>DSD Rejected</fullName>
                <isActive>false</isActive>
                <label>DSD Rejected</label>
            </value>
            <value>
                <fullName>DSD Review</fullName>
                <isActive>false</isActive>
                <label>DSD Review</label>
            </value>
            <value>
                <fullName>Design Details</fullName>
                <isActive>false</isActive>
                <label>Design Details</label>
            </value>
            <value>
                <fullName>Incentive Details</fullName>
                <isActive>false</isActive>
                <label>Incentive Details</label>
            </value>
            <value>
                <fullName>New Project</fullName>
                <isActive>false</isActive>
                <label>New Project</label>
            </value>
            <value>
                <fullName>PPA Details</fullName>
                <isActive>false</isActive>
                <label>PPA Details</label>
            </value>
            <value>
                <fullName>Project Overview</fullName>
                <isActive>false</isActive>
                <label>Project Overview</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>