test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Total_AC_Size__c.field-meta.xml
<CustomField>
    <fullName>Total_AC_Size__c</fullName>
    <description>Sum of all site&apos;s AC Size</description>
    <inlineHelpText>Sum of all site&apos;s AC Size</inlineHelpText>
    <label>Total AC Size</label>
    <summarizedField>Sites__c.Total_AC_Size__c</summarizedField>
    <summaryForeignKey>Sites__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>