test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/fields/Total_Year_One_Yield__c.field-meta.xml
<CustomField>
    <fullName>Total_Year_One_Yield__c</fullName>
    <description>Sum of all site&apos;s Year One Yield</description>
    <inlineHelpText>Sum of all site&apos;s Year One Yield</inlineHelpText>
    <label>Total Year One Yield</label>
    <summarizedField>Sites__c.Year_One_Specific_Yield__c</summarizedField>
    <summaryForeignKey>Sites__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>