test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/recordTypes/Portal.recordType-meta.xml
<RecordType>
    <fullName>Portal</fullName>
    <active>true</active>
    <description>prototype for testing portal functionality</description>
    <label>Portal</label>
</RecordType>