test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/listViews/Naomi_s_Analysis.listView-meta.xml
<ListView>
    <fullName>Naomi_s_Analysis</fullName>
    <columns>NAME</columns>
    <columns>Model_Type_Solve_For__c</columns>
    <columns>Solver_Result__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Naomi</value>
    </filters>
    <label>Naomi&apos;s Analysis</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>