test/force-app/main/default/objects/PortfolioFinancialAnalysis__c/listViews/Project_Opportunities.listView-meta.xml
<ListView>
    <fullName>Project_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Total_DC_Size__c</columns>
    <columns>Estimated_COD__c</columns>
    <columns>Stage__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>PortfolioFinancialAnalysis__c.Portal</value>
    </filters>
    <label>Project Opportunities</label>
</ListView>